assets/style.css
/* TODO: Don't use CDN and serve as assets */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');

:root {
    --bg: #eaeaea;
    --fg: #333;

    --bg-dark: hsl(220, 5%, 93%);
    --bg-darker: hsl(220, 5%, 90%);
    --bg-darker-2: #dadada;

    --accent-1: #278542;
    --accent-1-fg: #154d24;

    --card-date: #666;
    --card-content: #222;

    --font-sf: 'Inter', sans-serif;
    --font-weight-light: 300;
    --font-weight-normal: 400;
    --font-weight-medium: 500;
    --font-weight-bold: 700;

    --shadow-1: 0 0 16px 0 #00000018;
}

* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
}

html {
    height: 100%;
    width: 100%;
}

body {
    background: var(--bg);
    color: var(--fg);

    font-family: var(--font-sf);
    font-size: 17px;
    font-weight: var(--font-weight-normal);

    width: 100%;
    min-height: 100%;

    position: relative;
}

.main {
    max-width: 70ch;
    margin: 0 auto;
    padding-bottom: 8rem;

    display: flex;
    flex-direction: column;

    align-items: center;
    justify-content: center;

    gap: 3rem;
}

nav {
    padding: 1rem 0;

    display: flex;
    flex-wrap: wrap;
    gap: 1rem;

    align-items: center;
    justify-content: center;
    font-weight: var(--font-weight-medium);

    color: var(--accent-1-fg);
}

/* Tutti i link dentro la navbar sono speciali e non sembrano link */
nav .nav-element {
    display: flex;
    width: 100%;
    height: 100%;

    align-items: center;
    justify-content: center;

    text-decoration: none;
    color: inherit;

    gap: 0.5rem;
}

nav a:hover {
    color: var(--accent-1-fg);
    text-decoration: none;
}

nav .nav-logo {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.25rem 0;

    background: var(--bg-dark);
    border-radius: 4px;
    border: 1px solid var(--bg-darker-2);
    box-shadow: var(--shadow-1);

    transition: transform 150ms ease-in-out;
}

nav .nav-logo:hover {
    transform: scale(1.05);
}

nav .nav-logo img {
    width: 150px;
    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
}

nav .nav-main {
    display: flex;
    /* grid-template-columns: repeat(5, 1fr) 1fr auto 1fr; */

    background: var(--bg-dark);
    border-radius: 4px;
    border: 1px solid var(--bg-darker-2);
    box-shadow: var(--shadow-1);

    z-index: 0;
}

nav .nav-item.filler {
    width: 6rem;
}

nav .nav-main .nav-element {
    padding: 1rem 1.25rem;
    cursor: pointer;
}

nav .nav-main .nav-button {
    margin: 0 0.5rem;
    /* padding: 0.5rem; */

    aspect-ratio: 1;
    width: 2rem;
    height: 2rem;

    /* background: var(--bg-darker-2); */

    display: flex;
    align-items: center;
    justify-content: center;

    border: 1px solid var(--bg-darker-2);
    border-radius: 1rem;

    cursor: pointer;
}

nav .nav-main .nav-item {
    display: flex;
    align-items: center;
    justify-content: center;

    background: var(--bg-dark);

    user-select: none;

    z-index: 2;
}

nav .nav-main .nav-element:hover, nav .nav-main .nav-button:hover {
    background: var(--bg-darker);
}

nav .nav-main .nav-item.dropdown {
    position: relative;

    z-index: 1;
}

nav .nav-main .nav-item.dropdown .nav-items .nav-item:last-child {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

nav .nav-main .nav-item.dropdown .name {
    width: 100%;
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;

    background: var(--bg-dark);

    z-index: 3;
}

nav .nav-main .nav-item.dropdown .name:hover {
    background: var(--bg-darker);
}

nav .nav-main .nav-item.dropdown .nav-items {
    position: absolute;
    top: 100%;
    width: 100%;

    display: none;

    background: var(--bg-dark);
    border-radius: 4px;
    border: 1px solid var(--bg-darker-2);
    box-shadow: var(--shadow-1);
}
/*
nav .nav-main .nav-item.dropdown .nav-items::before {
    position: absolute;
    content: '';
    top: -2px;
    height: 2px;
    left: 0;
    right: 0;
    width: 100%;

    background: var(--bg-darker);
} */

nav .nav-main .nav-item.dropdown .name:hover + .nav-items, nav .nav-main .nav-item.dropdown .name + .nav-items:hover {
    display: flex;
    flex-direction: column;
}

/* .nav-main borders */
.nav-main > .nav-item:first-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}
.nav-main > .nav-item:last-child {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}

footer {
    position: absolute;
    bottom: 0;
    left: 50%;
    height: 3rem;

    width: 80ch;

    transform: translate(-50%, 0);

    background: var(--bg-dark);
    border-radius: 4px;
    border: 1px solid var(--bg-darker-2);
    border-bottom: none;
    box-shadow: var(--shadow-1);

    display: flex;
    align-items: center;
    justify-content: center;

    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

/* Components */

section {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.card-list {
    display: flex;
    flex-direction: column;
    align-items: center;

    gap: 1rem;

    margin-top: 1rem;
}

.card {
    background: var(--bg-dark);
    border-radius: 4px;
    border: 1px solid var(--bg-darker-2);
    box-shadow: var(--shadow-1);

    max-width: 60ch;

    padding: 1rem;

    display: flex;
    flex-direction: column;
}

.card .title {
    font-size: 22px;
    font-weight: var(--font-weight-bold);
}

.card .date {
    font-size: 15px;
    color: var(--card-date);

    margin-bottom: 0.75rem;
}

.card .description {
    font-weight: var(--font-weight-light);
    color: var(--card-content);
}

/* Typography */

h1, h2, h3, h4 {
    margin: 0;
    margin-top: 1rem;
    margin-bottom: 0.5rem;

    font-weight: var(--font-weight-light);
}

p {
    margin: 0.5rem 0;
}

/* Controls */

a {
    color: var(--accent-1-fg);
    font-weight: var(--font-weight-medium);
    text-decoration: none;
}

a:hover {
    color: var(--accent-1);
    text-decoration: underline;
}

/* Responsiveness */

@media screen and (max-width: 950px) {
    
}

/* Pages */

.page-home {
    /* TODO: Sarebbe meglio se si riuscisse a capire come farlo senza */
    overflow-x: hidden;
}

.page-home .nav-logo {
    display: none;
}

.page-home .super {
    position: absolute;
    left: 50vw;
    top: 50vh;

    width: 90vw;

    transform: translate(-50%, -50%);

    display: flex;
    flex-direction: row;
    flex-wrap: wrap;

    align-items: center;
    justify-content: center;

    gap: 2rem;
}

.page-home canvas {
    position: absolute;
    width: 100vw;
    height: 100vh;
    top: 0;
    right: 0;

    pointer-events: none;
    z-index: -1;

    transition: opacity 1000ms ease-in-out;
    opacity: 1;
}

.page-home canvas.hide {
    opacity: 0;
}

.page-home .super .block.text {
    max-width: 40ch;
    font-size: 2.5vmin;
}

.page-home .super .block.text h1 {
    font-weight: var(--font-weight-medium);
}

.page-home .super .block.text p {
    font-weight: var(--font-weight-light);
}

.page-home .super .block.image {
    max-width: 80ch;
}

.page-home .super .block.image img {
    width: 100%;
    filter: drop-shadow(0 0 64px rgba(0, 0, 0, 0.2)) drop-shadow(0 0 8px rgba(0, 0, 0, 0.35));
}

.page-home .main {
    padding-top: calc(100vh - 6rem);
}

